<resources>
    <string name="app_name">TFG Lorenzo - MTG Deck Builder</string>

    <!--    default-->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Action Setings</string>
    <string name="first_fragment_label">First fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!--    strings textViex-->
    <string name="txtBotonSubmit">Submit</string>
    <string name="txtLogoLogin">Deck Builder</string>
    <string name="txtMail">Email</string>
    <string name="txtPasswd">Password</string>

    <string name="txtCopyright">All rights reserved. All artwork, images, text and other copyrightable images are the copyrights of Wizards. All other trademarks and copyrightable content are the property of their respective owners and used under license.</string>
    <string name="signUp">Sign up</string>
    <string name="account">You don\'t have account?</string>
    <string name="txtNick">Nick</string>
    <string name="txtNewAccountActivity">Registry new account</string>
    <string name="errorLogin">Incorrect email or password</string>
    <string name="errorPass">Invalid password</string>
    <string name="errorNick">Invalid nick</string>
    <string name="errorEmail">Invalid email</string>

    <!--    strings button-->
    <string name="bntVolver">Volver</string>
    <string name="btnCreateAccount">Create account</string>
    <string name="btnBackSignUp">Back to login</string>

    <!--    strings imageView-->
    <string name="imgAkroma">Akroma angel de la ira</string>
    <string name="txtImgLogo">Logo antiguo MTG</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coste_mana">Coste mana</string>
    <string name="nombre_carta">Nombre carta</string>
    <string name="nombremazo">NombreMazo</string>
    <string name="numero_de_cartas">Numero de cartas</string>

    <string name="userPreferences">userPreferences</string>
    <string name="preferences_is_loged">preferences_is_loged</string>
    <string name="preferences_email">preferences_email</string>
    <string name="preferences_pass">preferences_pass</string>
    <string name="preferences_nick">preferences_nick</string>
    <string name="preferences_apikey">preferences_apikey</string>
</resources>