<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_user_login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_gravity="center|top"
        android:contentDescription="@string/txtImgLogo"
        android:paddingHorizontal="40dp"
        app:srcCompat="@drawable/mtglogo_old" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/belerenbold"
        android:shadowColor="#030357"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:text="@string/txtLogoLogin"
        android:textAlignment="center"
        android:textColor="#AC1717"
        android:textSize="45sp"
        android:textStyle="bold" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerLogin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:layout="@layout/fragment_login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">

        <TextView
            android:id="@+id/txt_copyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtCopyright"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_admin_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:clickable="false"
            android:text="@string/bntVolver"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>