<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".fragments.activityLogin.FragmentLogin">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:backgroundTint="?attr/textColorAlertDialogListItem"
        app:cardCornerRadius="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bordelogin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/txtMail"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/backgroundeditext"
                android:backgroundTint="#DFD7DA"
                android:ems="10"
                android:hapticFeedbackEnabled="false"
                android:hint="@string/txtMail"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#263238"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txt_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/txtPasswd"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:autofillHints="password"
                android:background="@drawable/backgroundeditext"
                android:backgroundTint="#DFD7DA"
                android:ems="10"
                android:hint="@string/txtPasswd"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#263238"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txt_errorlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#CA0C0C"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/darker_gray"
                android:fontFamily="@font/belerenbold"
                android:text="@string/txtBotonSubmit"
                android:textColor="#555252"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_account"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="start|end"
                    android:paddingStart="10dp"
                    android:text="@string/account"
                    android:textColor="#07467C" />

                <TextView
                    android:id="@+id/txt_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingStart="5dp"
                    android:text="@string/signUp"
                    android:textColor="#C52323"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_blank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>