<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_gravity="center|top"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:padding="5dp"
        android:src="@drawable/magic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518">

        <TextView
            android:id="@+id/txt_deck_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom|left"
            android:text="@string/nombremazo"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/txt_num_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="16dp"
            android:gravity="top|start"
            android:text="@string/numero_de_cartas"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_edit_deck"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/bntVolver"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

        <ImageButton
            android:id="@+id/btn_delete_deck"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/bntVolver"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>