<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="UselessParent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:padding="5dp"
        android:src="@drawable/magic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout7"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txt_cardName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:autoText="true"
            android:gravity="bottom|start"
            android:text="@string/nombre_carta"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_cardCost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:autoSizeTextType="none"
            android:autoText="true"
            android:gravity="start|top"
            android:text="@string/coste_mana"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_num_copies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_add_copies"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <ImageButton
                android:id="@+id/btn_substract_copies"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/bntVolver"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_horizontal_rule_24" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_delete_card"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/bntVolver"
            app:srcCompat="@drawable/ic_baseline_delete_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>