<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.activityLogin.FragmentSignUp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:backgroundTint="?attr/textColorAlertDialogListItem"
        android:padding="5dp"
        app:cardCornerRadius="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bordelogin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/txtNick"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_nick"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="70dp"
                android:autofillHints="username"
                android:background="@drawable/backgroundeditext"
                android:backgroundTint="#DFD7DA"
                android:ems="10"
                android:hapticFeedbackEnabled="false"
                android:hint="@string/txtNick"
                android:includeFontPadding="false"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#263238"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/txtMail"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="70dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/backgroundeditext"
                android:backgroundTint="#DFD7DA"
                android:ems="10"
                android:hapticFeedbackEnabled="false"
                android:hint="@string/txtMail"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#263238"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txt_pass"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/txtPasswd"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="70dp"
                android:autofillHints="password"
                android:background="@drawable/backgroundeditext"
                android:backgroundTint="#DFD7DA"
                android:ems="10"
                android:hint="@string/txtPasswd"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#263238"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@android:color/darker_gray"
                    android:fontFamily="@font/belerenbold"
                    android:text="@string/btnCreateAccount"
                    android:textColor="#555252"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@android:color/darker_gray"
                    android:fontFamily="@font/belerenbold"
                    android:text="@string/btnBackSignUp"
                    android:textColor="#555252"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="2dp"
                    android:layout_height="54dp"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txt_errorSu"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#C30303"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>